Ingress/multiplos_services/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-service-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2

spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /nginx(/|$)(.*) # Redirecionamento será com base no path /nginx
        pathType: ImplementationSpecific
        backend:
          service:
            name: nginx
            port:
              number: 80
  - http:
      paths:
      - path: /httpd(/|$)(.*) # Redirecionamento será com base no path /nginx
        pathType: ImplementationSpecific
        backend:
          service:
            name: httpd
            port:
              number: 80
